--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ results/
 # Ignore PDF file
 *.pdf
 
+# Ignore SVG file
+*.svg
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,linux,windows,matlab,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,linux,windows,matlab,visualstudiocode
 
