--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,10 +18,15 @@ Intersect unittest:
   tags:
     - docker
 
-#Scenario Unittest:
-  #extends: .matlab_defaults
-  #stage: Test
-  #script:
-    #- matlab -batch "openProject('graph_based_planning.prj'); results = runtests('tests/scenario_unittest.m'); assertSuccess(results);"
-  #tags:
-    #- docker
+Scenario Unittest:
+  extends: .matlab_defaults
+  stage: Test
+  script:
+    - matlab -batch "openProject('graph_based_planning.prj'); results = runtests('tests/scenario_unittest.m'); assertSuccess(results);"
+  tags:
+    - docker
+  cache:
+    key: default
+    paths:
+      - commun/cust1/matlab_msg_gen
+    
