spell check extension, more guidelines

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "affenwiesel.matlab-formatter"
+        "affenwiesel.matlab-formatter",
+        "streetsidesoftware.code-spell-checker"
     ]
 }
