#55 refactor folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ $RECYCLE.BIN/
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,linux,windows,matlab,visualstudiocode
 ui/Config.json
+
+Config.json
