--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "unified_lab_api/ula_interfaces"]
-	path = hlc/communication/unified_lab_api/ula_interfaces
-	url = ../../p-dmpc/ula_interfaces.git
 [submodule "lanelets/lanelet2/lanelet2_scaled_lab_projector"]
 	path = scenarios/road_network/lanelets/lanelet2/lanelet2_scaled_lab_projector
 	url = ../../p-dmpc/lanelet2_scaled_lab_projector.git
+[submodule "hlc/communication/unified_lab_api/ula_msgs"]
+	path = hlc/communication/unified_lab_api/ula_msgs
+	url = ../../p-dmpc/ula_msgs.git
