remove and ignore generated Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -152,6 +152,7 @@ CMakeSettings.json
 
 hlc/optimizer/graph_search_mex/CMakeFiles/
 hlc/optimizer/graph_search_mex/x64/
+hlc/optimizer/graph_search_mex/Makefile
 hlc/optimizer/graph_search_mex/optimizer.dir/
 CMakeCache.txt
 
