--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,7 +47,7 @@ stages:
         path: tests/coverage/coverageReport.xml
 
 
-Startup:
+build:
   extends: .matlab_defaults
   stage: Build
   script:
@@ -63,9 +63,20 @@ Startup:
     GIT_SUBMODULE_STRATEGY: recursive
   tags:
     - docker
+  artifacts:
+    paths:
+    - hlc/optimizer/graph_search/priority_queue/priority_queue_interface_mex.mexa64
+    - hlc/optimizer/graph_search_cpp/graph_search_cpp_centralized_mex.mexa64
+    - hlc/optimizer/graph_search_cpp/graph_search_cpp_priority_mex.mexa64
+    - scenarios/road_network/lanelets/lanelet2/generate_lanelet2_ref_path_loop_indices_mex.mexa64
+    - scenarios/road_network/lanelets/lanelet2/load_lanelet2_map_matlab_mex.mexa64
+    expire_in: 1 hour
 
-Systemtests:
+test:
   extends: .matlab_with_test_coverage
   variables:
     TEST_FOLDER: "'tests'"
-    COVERAGE_FOLDER: "{'config', 'helper', 'hlc', 'manual_control', 'plant', 'scenarios', 'ui', 'visualization'}"
+    COVERAGE_FOLDER: "{'config', 'helper', 'hlc', 'plant', 'scenarios', 'ui', 'visualization'}"
+  needs:
+  - job: build
+    artifacts: true
