--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,44 +7,33 @@ stages:
     name: registry.git-ce.rwth-aachen.de/cpm/coincar/software/graph_based_planning/matlab:latest
     entrypoint: [""]
 
-.matlab_with_test_summary:
-  extends: .matlab_defaults
-  variables:
-    TEST_FOLDER:
-      description: "Folder to execute all tests for."
-  stage: Test
-  script:
-    - matlab -batch
-       "openProject('graph_based_planning.prj');
-        results = execute_tests($TEST_FOLDER, false);
-        assertSuccess(results);"
-  artifacts:
-    when: always
-    reports:
-      junit: tests/coverage/junitReport.xml
-  tags:
-    - docker
-
 .matlab_with_test_coverage:
-  extends: .matlab_with_test_summary
+  extends: .matlab_defaults
   variables:
     TEST_FOLDER:
       description: "Folder in which tests are located."
     COVERAGE_FOLDER:
       description: "Folder to compute code coverage for."
+  stage: Test
   script:
     - matlab -batch
        "openProject('graph_based_planning.prj');
-        [results, coverage] = execute_tests($TEST_FOLDER, true, $COVERAGE_FOLDER);
+        [results, coverage] = execute_tests($TEST_FOLDER, $COVERAGE_FOLDER);
         fprintf('Code coverage %s%%\n', coverage);
         assertSuccess(results);"
   coverage: /Code coverage ([\.\d]*)%/
   artifacts:
     when: always
     reports:
+      junit: tests/coverage/junitReport.xml
       coverage_report:
         coverage_format: cobertura
         path: tests/coverage/coverageReport.xml
+    artifacts:
+      paths:
+      - tests/coverage/htmlReport/
+  tags:
+    - docker
 
 
 build:
