Switch gitmodule of uti_msgs to github repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = ../../p-dmpc/lanelet2_scaled_lab_projector.git
 [submodule "hlc/communication/unified_testbed_interface/uti_msgs"]
 	path = hlc/communication/unified_testbed_interface/uti_msgs
-	url = ../../p-dmpc/uti_msgs.git
+	url = https://github.com/embedded-software-laboratory/uti_msgs
