pull lfs files before test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,13 @@ stages:
       description: "Folder in which tests are located."
     COVERAGE_FOLDER:
       description: "Folder to compute code coverage for."
+    GIT_LFS_SKIP_SMUDGE: "true"
   stage: Test
+  before_script:
+    - apt install git-lfs
   script:
     - export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
+    - git lfs pull
     - matlab -batch
       "openProject('graph_based_planning.prj');
       [results, coverage] = execute_tests($TEST_FOLDER, $COVERAGE_FOLDER);
