--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,7 +63,7 @@ test:
   extends: .matlab_with_test_coverage
   variables:
     TEST_FOLDER: "'tests'"
-    COVERAGE_FOLDER: "{'config', 'eval/result_analysis', 'eval/result_plotting', 'utility', 'hlc', 'plant', 'scenarios', 'visualization'}"
+    COVERAGE_FOLDER: "{'config', 'eval/processing', 'eval/plotting', 'utility', 'hlc', 'plant', 'scenarios', 'visualization'}"
   needs:
     - job: build
       artifacts: true
