--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "lanelets/lanelet2/lanelet2_scaled_lab_projector"]
-	path = scenarios/road_network/lanelets/lanelet2/lanelet2_scaled_lab_projector
-	url = ../../p-dmpc/lanelet2_scaled_lab_projector.git
 [submodule "hlc/communication/unified_testbed_interface/uti_msgs"]
 	path = hlc/communication/unified_testbed_interface/uti_msgs
 	url = https://github.com/embedded-software-laboratory/uti_msgs
+[submodule "scenarios/road_network/lanelets/lanelet2/Rosless-Lanelet2"]
+	path = scenarios/road_network/lanelets/lanelet2/Rosless-Lanelet2
+	url = https://github.com/embedded-software-laboratory/Rosless-Lanelet2.git
