[cpp] fix boost library version on macos systems

--- a/hlc/optimizer/graph_search_cpp/boost_cpm/CMakeLists.txt
+++ b/hlc/optimizer/graph_search_cpp/boost_cpm/CMakeLists.txt
@@ -1,4 +1,8 @@
-set(Boost_Version 1.82.0)
+if (APPLE)
+        set(Boost_Version 1.84.0)
+else ()
+        set(Boost_Version 1.82.0)
+endif ()
 
 CPMAddPackage(
         NAME boost_geometry_lib
